Varia: Fix iframe width on mobile devices

--- a/varia/sass/components/content/_entry-content.scss
+++ b/varia/sass/components/content/_entry-content.scss
@@ -40,8 +40,7 @@
 	// Overwrite iframe embeds that have inline styles.
 	> iframe[style] {
 
-		margin: #{map-deep-get($config-global, "spacing", "vertical")} 0 !important;
-		max-width: 100% !important;
+		display: block;
 
 	}
 
