--- a/varia/style-rtl.css
+++ b/varia/style-rtl.css
@@ -3165,8 +3165,8 @@ body:not(.fse-enabled) .footer-menu a {
 }
 
 .entry-content > iframe[style] {
-	margin: 32px 0 !important;
-	max-width: 100% !important;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 .entry-attachment {
