--- a/varia/style.css
+++ b/varia/style.css
@@ -3182,8 +3182,7 @@ body:not(.fse-enabled) .footer-menu a {
 }
 
 .entry-content > iframe[style] {
-	margin: 32px 0 !important;
-	max-width: 100% !important;
+	display: block;
 }
 
 .entry-attachment {
